<resources>
    <string name="app_name">SocSoc</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">REGISTER</string>
    <string name="hint_password">Password</string>
    <string name="hint_username">Username/Email</string>

    <string name="next_btn">NEXT</string>
    <string name="back_btn">GO BACK</string>
    <string name="register_main_areuQ">Account Type</string>
    <string name="play_ground_owner">Play Ground Owner</string>
    <string name="player">Soccer Player</string>

    <string name="uploud">UPLOUD</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="telephone">Mobile #:</string>
    <string name="address">Address:</string>
    <string name="email">Email:</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="play_ground_address">Play Ground Address:</string>

    <string name="title_activity_test">test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_owner_home_page">Owner Home Page</string>


    <!-- strings for the navigation drawer in the owner home page -->
    <string name="owner_advertise">Advertise</string>
    <string name="owner_manage_fields">Manage Fields</string>
    <string name="owner_edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="action_notifications">Notifications</string>


    <!-- strings for the owner advertisment activity-->
    <string name="title_activity_owner_advertis">Advertisement</string>
    <string name="region_radius">Region Target Radius</string>
    <string name="advertise_message_hint">Type your message here</string>
    <string name="advertise_send_message_button">Send</string>

    <string name="number_of_fields">Number Of Play Grounds</string>
    <string name="price">Price</string>
    <string name="availability_days">Available Days</string>
    <string name="availability_time">Available time</string>
    <string name="size">Size</string>
    <string name="insert_picture">Insert Field Picture</string>
    <string name="title_activity_player_home_page">playerHomePage</string>

    <!-- strings for the navigation drawer in the player home page -->
    <string name="player_teams">Teams</string>
    <string name="notification">Notification</string>
    <string name="player_edit_profile">Edit Profile</string>
    <string name="player_fields">Fields</string>
    <string name="log_out">Log Out</string>

    <string name="pick_a_date">Playing Date:</string>
    <string name="field_price">Field Price:</string>
    <string name="field_size">Field Size:</string>
    <string name="pick_a_date_hint">Please Pick a Day</string>
    <string name="pick_size_hint">Choose Field Size</string>
    <string name="pick_price_hint">Choose Price Range Limit</string>

    <!-- strings for the Buttons -->
    <string name="search">Search</string>
    <string name="edit">Edit</string>
    <string name="add">add</string>


    <string name="account">Account</string>


</resources>
