<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_team"
            android:title="@string/player_teams" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_field"
            android:title="@string/player_fields" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_edit"
            android:title="Slideshow" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>
