<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/baige"
    tools:context=".RegisterPlayer">

    <TextView
        android:id="@+id/textView_name"
        android:layout_width="53dp"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="40dp"
        android:text="@string/name"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView_name_in"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_name_in" />

    <TextView
        android:id="@+id/textView_telephone"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/telephone"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView_number_in"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_name" />

    <TextView
        android:id="@+id/textView_userName"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/username"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView_userName_in"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_telephone" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView_email_in"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_userName" />

    <TextView
        android:id="@+id/textView_password"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView_password_in"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_email" />

    <TextView
        android:id="@+id/textView_address"
        android:layout_width="93dp"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/play_ground_address"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_password" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="102dp"
        android:layout_height="38dp"
        android:layout_marginBottom="56dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/red_rounded_btn"
        android:text="@string/next_btn"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <Button
        android:id="@+id/go_back_btn_to_registermain"
        android:layout_width="109dp"
        android:layout_height="65dp"
        android:layout_marginBottom="16dp"
        android:background="#00B00020"
        android:drawableLeft="@drawable/back_icon"
        android:text="@string/back_btn"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/user_picture_register"
        android:layout_width="110dp"
        android:layout_height="125dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <Button
        android:id="@+id/button_uploud_pic"
        android:layout_width="88dp"
        android:layout_height="27dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginTop="88dp"
        android:background="#1aB00020"
        android:drawableRight="@drawable/uploud_icon"
        android:text="@string/uploud"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_email_in"
        android:layout_marginTop="20dp"
        android:layout_width="226dp"
        android:layout_height="24dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/textView_userName_in"
        app:layout_constraintTop_toBottomOf="@+id/textView_userName_in" />

    <TextView
        android:id="@+id/textView_number_in"
        android:layout_width="226dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/textView_name_in"
        app:layout_constraintTop_toBottomOf="@+id/textView_name_in" />

    <TextView
        android:id="@+id/textView_userName_in"
        android:layout_width="226dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/textView_number_in"
        app:layout_constraintTop_toBottomOf="@+id/textView_number_in" />

    <TextView
        android:id="@+id/textView_password_in"
        android:layout_width="226dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/textView_email_in"
        app:layout_constraintTop_toBottomOf="@+id/textView_email_in" />

    <TextView
        android:id="@+id/textView_name_in"
        android:layout_width="226dp"
        android:layout_height="22dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="52dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_uploud_pic" />



    <TextView
        android:id="@+id/textView_address_in"
        android:layout_width="226dp"
        android:layout_height="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_password_in" />

    <TextView
        android:id="@+id/textView_numberOfFields"
        android:layout_width="87dp"
        android:layout_height="39dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/number_of_fields"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_address" />

    <EditText
        android:id="@+id/textView_numberOfFields_in"
        android:layout_width="226dp"
        android:layout_height="24dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/textView_address_in"
        app:layout_constraintTop_toBottomOf="@+id/textView_address_in" />




</android.support.constraint.ConstraintLayout>