<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/child">


    <ImageView
        android:id="@+id/imageView_field"
        android:layout_width="77dp"
        android:layout_height="72dp"
        android:layout_marginEnd="120dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="120dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        app:layout_constraintEnd_toStartOf="@+id/uploud_field_pic_btn"
        app:layout_constraintStart_toStartOf="@+id/textView_size"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <Button
        android:id="@+id/uploud_field_pic_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="72dp"
        android:background="#1aB00020"
        android:drawableRight="@drawable/uploud_icon"
        android:text="@string/insert_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/size"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView_price"
        app:layout_constraintTop_toBottomOf="@+id/imageView_field" />

    <TextView
        android:id="@+id/textView_size_in"
        android:layout_width="226dp"
        android:layout_height="24dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginTop="36dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_field" />

    <TextView
        android:id="@+id/textView_price"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/price"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/textView_price_in"
        app:layout_constraintTop_toBottomOf="@+id/textView_size" />

    <TextView
        android:id="@+id/textView_price_in"

        android:layout_width="226dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/textView_size_in"
        app:layout_constraintTop_toBottomOf="@+id/textView_size_in" />

    <TextView
        android:id="@+id/textView_available_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/availability_days"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="@+id/textView_price"
        app:layout_constraintTop_toBottomOf="@+id/textView_price" />

    <TextView
        android:id="@+id/textView_available_day_in"
        android:layout_width="226dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/textView_price_in"
        app:layout_constraintTop_toBottomOf="@+id/textView_price_in" />

    <TextView
        android:id="@+id/textView_available_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/availability_time"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="@+id/textView_available_day"
        app:layout_constraintTop_toBottomOf="@+id/textView_available_day" />

    <TextView
        android:id="@+id/textView_available_time_in"
        android:layout_width="226dp"
        android:layout_height="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/textView_available_day_in"
        app:layout_constraintTop_toBottomOf="@+id/textView_available_day_in" />

    <TextView
        android:id="@+id/textView_to_be_filled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>